tests/fixtures/errors/e0001_duplicate_module.mimz
// expect: E0001
module A {
  out y: bit
  y = 0
}
module A {
  out z: bit
  z = 0
}
